--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
 	<a href="/" id="nav_b1">
 		<div class="nav" id="nav_1">
-			<img src="./icon1.png" style="height:16px; top:8px; left:8px">
-			<p style="top:-30px; left: 32px"> LTYSERVER </p>
+			<img src="/icon1.png" style="height:16px; top:8px; left:8px">
+			<p style="top:-30px; left: 32px"> JCBLOG </p>
 			<div class="nav_underline" id="udl_1"></div>
 		</div>
 	</a>
