--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	</a>
 	<div class="block_big">
 		<a href="/20241116.html">20241116</a>
+		<a href="/20241207.html">20241207</a>
 	</div>
 	<script>
 		var onmouse1;
