--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<div class="block_big">
 		<a href="/20241116.html">20241116</a>
 		<a href="/20241207.html">20241207</a>
+		<a href="/20241221.html">20241221</a>
 	</div>
 	<script>
 		var onmouse1;
